*** empty log message ***

--- a/doc/src/manual/ch-build-sim-progs.tex
+++ b/doc/src/manual/ch-build-sim-progs.tex
@@ -11,7 +11,7 @@ the following parts:
 \begin{itemize}
   \item{NED language\index{ned!files} topology description(s). These
       are files with the \ttt{.ned} suffix.}
-  \item{Messsage definitions\index{message definitions}, in files
+  \item{Message definitions\index{message definitions}, in files
       with \ttt{.msg} suffix.}
   \item{Simple modules implementations and other C++ code, in \ttt{.cc}
         files (or \ttt{.cpp}, on Windows)}
