*** empty log message ***

--- a/doc/src/manual/ch-introduction.tex
+++ b/doc/src/manual/ch-introduction.tex
@@ -200,9 +200,7 @@ even under the GUI which provides detailed feedback on what's going on.
 The manual is organized the following way:
 
 \begin{itemize}
-  \item{The chapters
-    \ref{cha:introduction} and
-    \ref{cha:overview}
+  \item{The chapters \ref{cha:introduction} and \ref{cha:overview}
     contain introductory material}
   \item{The second group of chapters,
     \ref{cha:the-ned-language},
