--- a/doc/src/manual/ch-overview.tex
+++ b/doc/src/manual/ch-overview.tex
@@ -340,7 +340,7 @@ files\index{output!vector file}, output scalar files
 of output vector files. It is not expected that someone will
 process the result files using {\opp} alone: output files are text
 files in a format which can be read into math packages like Matlab
-or Octave, or imported into spreadsheets like OpenOffice Calc, \
+or Octave, or imported into spreadsheets like OpenOffice Calc,
 Gnumeric or MS Excel (some preprocessing using \fprog{sed}, \fprog{awk}
 or \fprog{perl} might be required, this will be discussed later).
 All these external programs provide rich functionality for statistical
