*** empty log message ***

--- a/doc/src/manual/ch-introduction.tex
+++ b/doc/src/manual/ch-introduction.tex
@@ -220,7 +220,7 @@ The manual is organized the following way:
     \ref{cha:run-sim} and
     \ref{cha:analyzing-simulation-results} deal with practical issues
     like building and running simulations and analyzing results, and
-    present the tools {\opp} has to support these tasks.}
+    present the tools {\opp} provides to support these tasks.}
   \item{Chapter \ref{cha:parallel-execution} is devoted to the support
     of distributed execution.}
   \item{Finally, Chapter \ref{cha:opp-design} explains the
